--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node --watch index.js"
   },
   "keywords": [],
@@ -15,9 +15,19 @@
     "@adminjs/express": "^6.1.0",
     "@adminjs/mongoose": "^4.1.0",
     "adminjs": "^7.8.13",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.6.3",
+    "multer": "^1.4.5-lts.1",
     "winston": "^3.14.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.0.1",
+    "supertest": "^7.0.0"
   }
 }
